Kamerka + resizowanie + update fotek

--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
@@ -115,6 +115,11 @@
                 android:layout_width="175dp"
                 android:layout_height="wrap_content"
                 android:text="@string/label_choose_images" />
+            <Button
+                android:id="@+id/button_take_photo"
+                android:layout_width="175dp"
+                android:layout_height="wrap_content"
+                android:text="Take photo" />
 
         </LinearLayout>
 
