--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"/>
+
+        <ImageButton
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/matchEmotionsSpeakerButton"
+            android:src="@drawable/myspeaker"
+            android:scaleType="centerCrop"
+            android:background="@null"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
     <LinearLayout
