--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_main.xml
@@ -16,29 +16,31 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/rightEmotion"
+            android:layout_marginTop="17dp"
+            android:textSize="60dp"
             android:textColor="@color/command"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            android:layout_toLeftOf="@+id/matchEmotionsSpeakerButton"/>
 
         <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_marginTop="18dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:id="@+id/matchEmotionsSpeakerButton"
-            android:src="@drawable/myspeaker"
+            android:src="@drawable/icon_speaker"
             android:scaleType="centerCrop"
             android:background="@null"
-            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/imageGallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:gravity="center_horizontal"
         android:orientation="horizontal"
         />
 
