--- a/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/list_single.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="41dp"
-        android:text="Active"
+        android:text="@string/active"
         android:layout_marginEnd="41dp"
         android:layout_alignBottom="@+id/edit_btn"
         android:layout_toLeftOf="@+id/edit_btn"
