--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_end.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_end.xml
@@ -11,6 +11,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pg.autyzm.graprzyjazneemocje.EndActivity">
 
+    <ImageView
+        android:id="@+id/sun_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/sun"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
     <TextView
         android:id="@+id/endTextMain"
         android:layout_width="match_parent"
