--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_end.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_end.xml
@@ -12,39 +12,33 @@
     tools:context="pg.autyzm.graprzyjazneemocje.EndActivity">
 
     <ImageView
-        android:id="@+id/sun_image"
+        android:id="@+id/sun_image_end"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:src="@drawable/sun"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/endTextMain"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/score"
-        android:gravity="center_horizontal"/>
+        android:adjustViewBounds="true"
+        android:src="@drawable/sun" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:orientation="vertical"
->
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/rightAnswers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/score"/>
+            android:textColor="@color/score" />
 
         <TextView
             android:id="@+id/wrongAnswers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/score" />
+
         <TextView
             android:id="@+id/timeout"
             android:layout_width="wrap_content"
@@ -53,5 +47,39 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/exitButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_exit" />
+
+    <ImageButton
+        android:id="@+id/prevButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:onClick="repeatLevel"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_prev" />
+
+    <TextView
+        android:id="@+id/endTextMain"
+        android:text="afss"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:textColor="@color/command"
+        android:textSize="40dp"
+        android:layout_below="@+id/exitButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
