--- a/GraPrzyjazneEmocje/app/src/main/res/layout/activity_end.xml
+++ b/GraPrzyjazneEmocje/app/src/main/res/layout/activity_end.xml
@@ -68,17 +68,28 @@
         android:background="@null"
         android:onClick="repeatLevel"
         android:scaleType="centerCrop"
-        android:src="@drawable/icon_prev" />
+        android:src="@drawable/icon_next" />
 
     <TextView
         android:id="@+id/endTextMain"
-        android:text="afss"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:textColor="@color/command"
         android:textSize="40dp"
         android:layout_below="@+id/exitButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:id="@+id/prevButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@null"
+        android:onClick="repeatLevel"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_prev"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
