--- a/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/activity_level_configuration.xml
@@ -11,66 +11,59 @@
     tools:context="pg.autyzm.przyjazneemocje.LevelConfiguration">
 
 
-    <!--<Button-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="@string/newPhoto"-->
-    <!--android:id="@+id/cameraButton"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:layout_toLeftOf="@+id/spinner2"-->
-    <!--android:layout_toStartOf="@+id/spinner2"-->
-    <!--android:layout_marginBottom="21dp" />-->
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/label_level_name"
-            android:text="@string/label_level_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/label_level_name" />
 
         <EditText
             android:id="@+id/level_name"
-            android:text="@string/level_name"
-            android:inputType="text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:text="@string/level_name" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="280dip"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+        android:layout_marginStart="450dip"
+        android:layout_marginTop="80dip"
 
-        <LinearLayout
+        android:orientation="vertical">
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="@string/time_limit" />
 
             <EditText
                 android:id="@+id/time_limit"
-                android:layout_width="162dp"
+                android:layout_width="50dip"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:ems="10"
                 android:inputType="number"
                 android:text="60" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView2"
@@ -81,57 +74,58 @@
 
             <EditText
                 android:id="@+id/pv_per_level"
-                android:layout_width="161dp"
+                android:layout_width="50dip"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:ems="10"
                 android:inputType="number"
                 android:maxLength="5"
                 android:text="3" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:text="@string/sublevels" />
 
             <EditText
                 android:id="@+id/sublevels"
-                android:layout_width="161dp"
+                android:layout_width="50dip"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:ems="10"
                 android:inputType="number"
                 android:maxLength="5"
                 android:text="3" />
-        </LinearLayout>
+        </RelativeLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:text="@string/correctness" />
 
             <EditText
                 android:id="@+id/correctness"
-                android:layout_width="161dp"
+                android:layout_width="50dip"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:ems="10"
                 android:inputType="number"
                 android:maxLength="5"
                 android:text="3" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -151,19 +145,24 @@
 
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="167dp"
+                android:layout_width="220dip"
                 android:layout_height="wrap_content" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/button_choose_images"
-                android:layout_width="175dp"
-                android:layout_height="wrap_content"
-                android:text="@string/label_choose_images" />
-            <Button
+                android:layout_width="70dip"
+                android:layout_height="70dip"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/icon_edit" />
+
+            <ImageButton
                 android:id="@+id/button_take_photo"
-                android:layout_width="175dp"
-                android:layout_height="wrap_content"
-                android:text="@string/newPhoto" />
+                android:layout_width="70dip"
+                android:layout_height="70dip"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/icon_camera" />
 
         </LinearLayout>
 
@@ -175,23 +174,22 @@
             android:text="@string/default_message" />
     </LinearLayout>
 
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:entries="@array/spinner" />
+    <!--<Spinner-->
+    <!--android:id="@+id/spinner2"-->
+    <!--android:layout_width="200dip"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_alignParentRight="true"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:entries="@array/spinner" />-->
 
     <LinearLayout
         android:id="@+id/choose_emo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_marginTop="80dip"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -233,8 +231,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
+
         <ImageButton
             android:id="@+id/levelButton"
             android:layout_width="80dip"
@@ -243,6 +242,7 @@
             android:onClick="addLevel"
             android:scaleType="fitXY"
             android:src="@drawable/icon_save" />
+
         <ImageButton
             android:id="@+id/exitButton"
             android:layout_width="80dip"
@@ -257,11 +257,11 @@
         android:id="@+id/saveMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:text="@string/save_message"
         android:textColor="@color/colorPrimary"
         android:textSize="25sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:visibility="invisible" />
 
 </RelativeLayout>
