--- a/PrzyjazneEmocje/app/src/main/res/layout/choose_images.xml
+++ b/PrzyjazneEmocje/app/src/main/res/layout/choose_images.xml
@@ -33,7 +33,7 @@
         android:layout_height="80dip"
         android:onClick="close"
         android:id="@+id/button_exit"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dip"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -45,7 +45,7 @@
         android:layout_height="80dip"
         android:onClick="saveImagesToList"
         android:id="@+id/button_save_img"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dip"
         android:layout_toLeftOf="@+id/button_exit"
         android:layout_toStartOf="@+id/button_exit" />
 </RelativeLayout>
